--- a/index.html
+++ b/index.html
@@ -228,8 +228,52 @@
 
             <!-- FOOTER -->
             <footer>
-                
+                <div class="container">
+                    <div class="desc">
+                        <h1>Hangeul<span>in</span></h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Urna sollicitudin malesuada cras egestas gravida. Quis potenti suspendisse aliquet consectetur egestas et.</p>
+                    </div>
+                    <div class="item-footer">
+                        <div class="box">
+                            <h3>Legalitas</h3>
+                            <span>Kebijakan Privasi</span>
+                            <span>Persyaratan Layanan</span>
+                        </div>
+                        <div class="box">
+                            <h3>Jelajahi</h3>
+                            <span>Kursus</span>
+                            <span>Beasiswa</span>
+                            <span>Tour</span>
+                        </div>
+                        <div class="box">
+                            <h3>Perusahaan</h3>
+                            <span>Hubungi Kami</span>
+                            <span>Tentang Kami</span>
+                        </div>
+                        <div class="box">
+                            <h3>Newsletter</h3>
+                            <span>Dapatkan pembaruan yang menarik dari kami</span>
+                            <input type="email" placeholder="   Email Anda">
+                            <div class="btn-subs">
+                                <a href="#" class="btn-subs">Subscribe</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </footer>
+
+            <!-- Author -->
+            <div class="blockquote">
+                <div class="container">
+                    <blockquote>Copyright 2021 Hak Cipta Terpelihara oleh Hangeulin</blockquote>
+                    <div class="icon-sosmed">
+                        <img width="25" height="25" src="https://img.icons8.com/ios/25/facebook-new.png" alt="facebook-new"/>
+                        <img width="25" height="25" src="https://img.icons8.com/ios/25/instagram-new--v1.png" alt="instagram-new--v1"/>
+                        <img width="25" height="25" src="https://img.icons8.com/ios/25/twitter--v1.png" alt="twitter--v1"/>
+                        <img width="25" height="25" src="https://img.icons8.com/ios/25/line-me.png" alt="line-me"/>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
